updated readme, added more instructions for running program